# bio-parquet

./: README.md  pyproject.toml
biopq/: cli.py  vcf_converter.py
