[project]
name = "biopq"
version = "0.0.1"
description = "Fast, local conversion of genomic files to Parquet."
readme = "README.md"
authors = [{ name = "Mike Hamilton", email = "mike.hamilton7@gmail.com" }]
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "cyvcf2>=0.31.1",
    "loguru>=0.7.3",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyranges>=0.1.4",
    "pysam>=0.23.3",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]

[project.urls]
Homepage = "https://github.com/bio-comp/bio-parquet"
Issues = "https://github.com/bio-comp/bio-parquet/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0", "pytest-sugar>=1.1.1"]
